--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="calculator">
         <div class="calculator__screen">
-            <p class="display">0</p>
+            <p class="calculator__display">0</p>
         </div>
         <div class="calculator__buttons">
             <button class="calculator__top-row ac">AC</button>
@@ -24,12 +24,12 @@
             <button class="calculator__number">7</button>
             <button class="calculator__number">8</button>
             <button class="calculator__number">9</button>
-            <button class="calculator__operator">x</button>
+            <button class="calculator__operator" id="times">x</button>
             
             <button class="calculator__number">4</button>
             <button class="calculator__number">5</button>
             <button class="calculator__number">6</button>
-            <button class="calculator__operator">-</button>
+            <button class="calculator__operator" id="minus">-</button>
             
             <button class="calculator__number">1</button>
             <button class="calculator__number">2</button>
