Style - dark mode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>JavaScript project 1 - Calculator</h1>
         <hr>
     </header>
-    <div class="calculator">
+    <div class="calculator lightmode">
         <div class="calculator__screen">
             <p class="calculator__display">0</p>
         </div>
