Added light mode

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <header>
         <h1>JavaScript project 1 - Calculator</h1>
+        <button class="change-mode">Click here to change colors</button>
         <hr>
     </header>
-    <div class="calculator lightmode">
+    <div class="calculator">
         <div class="calculator__screen">
             <p class="calculator__display">0</p>
         </div>
@@ -42,5 +43,6 @@
             <button class="calculator__equals">=</button>
         </div>
     </div>
+    <script src="./javascript.js"></script>
 </body>
 </html>
