--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>JavaScript project 1 - Calculator</h1>
+        <h1 class="title colored-text">JavaScript project 1 - Calculator</h1>
         <hr>
         <button class="change-mode">Click here to change colors</button>
     </header>
