--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             <button class="calculator__equal">=</button>
         </div>
     </div>
-    <script src="./javascript.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
